# OrcFortress

./: .gitignore  README.md  run.sh  run_valgrind.sh
Code/: .clangd  CMakeLists.txt
Code/Resources/: OrcFortress.db
Code/inc/: FSConverter.h
Code/inc/BACKEND/: Afvalmand.h  CustomVector.h  DatabaseLoader.h  Deur.h  Direction.h  Goudklomp.h  GrondstofObject.h  Kist.h  Meubilair.h  RandomEngine.h  Ruimte.h  RuimteFactory.h  Spelobject.h  SpelobjectFactory.h  Spelwereld.h  Vijand.h  VijandFactory.h  Voorwerp.h  WapenObject.h  WapenRustingObject.h
Code/inc/FRONTEND/: Game.h  Logger.h  Player.h  RuimteRenderer.h  SpelFacade.h
Code/src/: FSConverter.cpp  main.cpp
Code/src/BACKEND/: Afvalmand.cpp  CustomVector.tpp  DatabaseLoader.cpp  Deur.cpp  Goudklomp.cpp  GrondstofObject.cpp  Kist.cpp  Meubilair.cpp  RandomEngine.cpp  Ruimte.cpp  RuimteFactory.cpp  Spelobject.cpp  SpelobjectFactory.cpp  Spelwereld.cpp  Vijand.cpp  VijandFactory.cpp  Voorwerp.cpp  WapenObject.cpp  WapenRustingObject.cpp
Code/src/FRONTEND/: Game.cpp  Logger.cpp  Player.cpp  RuimteRenderer.cpp  SpelFacade.cpp
